--- a/index.html
+++ b/index.html
@@ -36,17 +36,25 @@
 
         <div class="container-relatorios">
           <div class="container-relatorio1">
-            <div class="branco"></div>
-            <p class="paragrafo-relatorio">Agendamentos</p>
-            <div class="vermelho"></div>
-            <p class="paragrafo-relatorio">Recusados</p>
+            <div class="SepararRelatorios">
+              <div class="branco"></div>
+              <p class="paragrafo-relatorio">Agendamentos</p>
+            </div>
+            <div class="SepararRelatorios">
+              <div class="vermelho"></div>
+              <p class="paragrafo-relatorio">Recusados</p>
+            </div>
           </div>
 
           <div class="container-relatorio2">
-            <div class="verde"></div>
-            <p class="paragrafo-relatorio">Aprovados</p>
-            <div class="amarelo"></div>
-            <p class="paragrafo-relatorio">Negociando</p>
+            <div class="SepararRelatorios">
+              <div class="verde"></div>
+              <p class="paragrafo-relatorio">Aprovados</p>
+            </div>
+            <div class="SepararRelatorios">
+              <div class="amarelo"></div>
+              <p class="paragrafo-relatorio">Negociando</p>
+            </div>
           </div>
         </div>
       </center>
