--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="container-relatorio1">
             <div class="SepararRelatorios">
               <div class="branco"></div>
-              <p class="paragrafo-relatorio">Agendamentos</p>
+              <p class="paragrafo-relatorio">Agendados</p>
             </div>
             <div class="SepararRelatorios">
               <div class="vermelho"></div>
