Correção de Layout
Correção de Layout

--- a/contratos.html
+++ b/contratos.html
@@ -21,35 +21,39 @@
 
 <header>
     <div class="verde">
-        <p>
-            Nome Do Estabelecimento
-        </p>
-        <p>
-            Endereço
-        </p>
+        <b>Nome Do Estabelecimento</b>
+        <br />
+        R. Teste da Silva, nº 46
+        <br />
+        Apto 33, bloco 22
+        <br />
+        Centro, Caraguatatuba/SP
     </div>
     <div class="amarelo">
-        <p>
-            Nome Do Estabelecimento
-        </p>
-        <p>
-            Endereço
-        </p>
+        <b>Nome Do Estabelecimento</b>
+        <br />
+        R. Teste da Silva, nº 46
+        <br />
+        Apto 33, bloco 22
+        <br />
+        Centro, Caraguatatuba/SP
     </div >
     <div class="preto">
-        <p>
-            Nome Do Estabelecimento
-        </p>
-        <p>
-            Endereço
-        </p>
+        <b>Nome Do Estabelecimento</b>
+        <br />
+        R. Teste da Silva, nº 46
+        <br />
+        Apto 33, bloco 22
+        <br />
+        Centro, Caraguatatuba/SP
     </div>
     <div class="vermelho">
-        <p>
-            Nome Do Estabelecimento
-        </p>
-        <p>
-            Endereço
-        </p>
+        <b>Nome Do Estabelecimento</b>
+        <br />
+        R. Teste da Silva, nº 46
+        <br />
+        Apto 33, bloco 22
+        <br />
+        Centro, Caraguatatuba/SP
     </div>
 </header>
