--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
       </center>
 
       <div class="button">
-        <button>CLENTE PROXIMOS</button>
+        <button>CLENTES PROXIMOS</button>
         <button>NOVO CADASTRO</button>
-        <button>MEU CADASTRO</button>
+        <button>
+          <a href="contratos.html">
+            MEUS CADASTROS
+          </a>
+        </button>
         <button>AGENDAR VISITA</button>
         <button>MINHA AGENDA</button>
         <button class="sair">SAIR</button>
