--- a/contratos.html
+++ b/contratos.html
@@ -20,40 +20,48 @@
 </html>
 
 <header>
+  <center>
+    <button>Voltar</button>
+    <img class="logo" src="./img//logo.png" alt="logo" />
+
     <div class="verde">
-        <b>Nome Do Estabelecimento</b>
-        <br />
-        R. Teste da Silva, nº 46
-        <br />
-        Apto 33, bloco 22
-        <br />
-        Centro, Caraguatatuba/SP
+      <b>Nome Do Estabelecimento</b>
+      <br />
+      R. Teste da Silva, nº 46
+      <br />
+      Apto 33, bloco 22
+      <br />
+      Centro, Caraguatatuba/SP
     </div>
+
     <div class="amarelo">
-        <b>Nome Do Estabelecimento</b>
-        <br />
-        R. Teste da Silva, nº 46
-        <br />
-        Apto 33, bloco 22
-        <br />
-        Centro, Caraguatatuba/SP
-    </div >
+      <b>Nome Do Estabelecimento</b>
+      <br />
+      R. Teste da Silva, nº 46
+      <br />
+      Apto 33, bloco 22
+      <br />
+      Centro, Caraguatatuba/SP
+    </div>
+
     <div class="preto">
-        <b>Nome Do Estabelecimento</b>
-        <br />
-        R. Teste da Silva, nº 46
-        <br />
-        Apto 33, bloco 22
-        <br />
-        Centro, Caraguatatuba/SP
+      <b>Nome Do Estabelecimento</b>
+      <br />
+      R. Teste da Silva, nº 46
+      <br />
+      Apto 33, bloco 22
+      <br />
+      Centro, Caraguatatuba/SP
     </div>
+
     <div class="vermelho">
-        <b>Nome Do Estabelecimento</b>
-        <br />
-        R. Teste da Silva, nº 46
-        <br />
-        Apto 33, bloco 22
-        <br />
-        Centro, Caraguatatuba/SP
+      <b>Nome Do Estabelecimento</b>
+      <br />
+      R. Teste da Silva, nº 46
+      <br />
+      Apto 33, bloco 22
+      <br />
+      Centro, Caraguatatuba/SP
     </div>
+  </center>
 </header>
