--- a/contratos.html
+++ b/contratos.html
@@ -21,7 +21,7 @@
 
 <header>
   <center>
-    <button>Voltar</button>
+    <button><a href="index.html"> Voltar</a></button>
     <img class="logo" src="./img//logo.png" alt="logo" />
 
     <div class="verde">
