--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
       </center>
 
       <div class="button">
-        <button>CLENTES PROXIMOS</button>
-        <button>NOVO CADASTRO</button>
+        <button>
+          <a href="inputs.html">
+          NOVO CADASTRO</button>
+          </a>
         <button>
           <a href="contratos.html">
             MEUS CADASTROS
