--- a/inputs.html
+++ b/inputs.html
@@ -22,7 +22,7 @@
 <body>
   <header>
     <center>
-      <button>Voltar</button>
+      <button><a href="index.html">Voltar</a></button>
 
       <div>
         <img class="logo" src="./img//logo.png" alt="logo" />
