--- a/agendar.html
+++ b/agendar.html
@@ -20,7 +20,7 @@
 </html>
 
 <header>
-  <button>Voltar</button>
+  <button> <a href="index.html">Voltar</a></button>
   <center>
     <img src="./img/logo.png" alt="logo" />
     <div>
@@ -36,6 +36,6 @@
         placeholder="Anotação"
       ></textarea>
     </div>
-    <button class="enviar">Enviar</button>
+    <button class="enviar"><a> Enviar</button>
 </center>
 </header>
