--- a/index.html
+++ b/index.html
@@ -19,60 +19,17 @@
   </head>
 </html>
 
-<body>
-  <header>
-    <div class="container">
-      <center>
-        <img class="logo" src="./img/logo.png" alt="logo" />
+<header>
+    <center>
+  <div class="container">
+    <img class="logo" src="./img/logo copy.png" alt="logo" />
 
-        <div class="container-avatar">
-          <img class="avatar" src="./img//trilhas foto.jpeg" alt="avatar" />
-          <div>
-            <p class="user-details">Antonio Rodrigues</p>
-            <p class="user-details">Trilheiro</p>
-            <p class="user-details">36 Contratos</p>
-          </div>
-        </div>
+    <div class="container-input">
+      <input type="text" name="user" placeholder="Usuario" />
 
-        <div class="container-relatorios">
-          <div class="container-relatorio1">
-            <div class="SepararRelatorios">
-              <div class="branco"></div>
-              <p class="paragrafo-relatorio">Agendados</p>
-            </div>
-            <div class="SepararRelatorios">
-              <div class="vermelho"></div>
-              <p class="paragrafo-relatorio">Recusados</p>
-            </div>
-          </div>
-
-          <div class="container-relatorio2">
-            <div class="SepararRelatorios">
-              <div class="verde"></div>
-              <p class="paragrafo-relatorio">Aprovados</p>
-            </div>
-            <div class="SepararRelatorios">
-              <div class="amarelo"></div>
-              <p class="paragrafo-relatorio">Negociando</p>
-            </div>
-          </div>
-        </div>
-      </center>
-
-      <div class="button">
-        <button>
-          <a href="inputs.html">
-          NOVO CADASTRO</button>
-          </a>
-        <button>
-          <a href="contratos.html">
-            MEUS CADASTROS
-          </a>
-        </button>
-        <button>AGENDAR VISITA</button>
-        <button>MINHA AGENDA</button>
-        <button class="sair">SAIR</button>
-      </div>
+      <input type="password" name="password" placeholder="Senha" />
     </div>
-  </header>
-</body>
+    <button><a href="index.html">Entrar</a></button>
+  </div>
+</center>
+</header>
