--- a/home.html
+++ b/home.html
@@ -69,9 +69,9 @@
             MEUS CADASTROS
           </a>
         </button>
-        <button>AGENDAR VISITA</button>
-        <button>MINHA AGENDA</button>
-        <button class="sair">SAIR</button>
+        <button> <a href="agendar.html">AGENDAR VISITA </a></button>
+        <button> <a href="meusAgendamentos.html">MINHA AGENDA </a></button>
+        <button class="sair"> <a href="index.html">SAIR</a></button>
       </div>
     </div>
   </header>
