--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <input type="password" name="password" placeholder="Senha" />
     </div>
-    <button><a href="index.html">Entrar</a></button>
+    <button><a href="home.html">Entrar</a></button>
   </div>
 </center>
 </header>
