--- a/checkinput.html
+++ b/checkinput.html
@@ -27,14 +27,15 @@
 
   <div class="conteiner">
     <div class="gastronimia-delivery">
-      <strong>DELIVERY ALIMENTOS E BEBI</strong>
-
-      <input type="checkbox" name="adegasdelivery" id="adegas" />
-      <label for="adegas"> Adega</label>
-      <label for="aguaegas">
+      <strong>DELIVERY ALIMENTOS E BEBIDAS</strong>
+      <div style="display: flex; flex-direction: row; align-items: center; width: 100%; height: 40px;">
+        <label for="adegas">Adega</label>
+        <input type="checkbox" name="adegasdelivery" id="adegas" />
+      </div>
+      <div style="display: flex; flex-direction: row; align-items: center; width: 100%; height: 40px;">
+        <label for="aguaegas">Água e Gás</label>
         <input type="checkbox" name="aguaegasdelivery" id="aguaegas" />
-        Água e Gás</label
-      >
+      </div>
       <label for="batataria">
         <input type="checkbox" name="batatariadelivery" id="batataria" />
         Batataria</label
