--- a/checkinput.html
+++ b/checkinput.html
@@ -190,9 +190,12 @@
       </div>
     </div>
 
+    <div class="hr"></div>
+
     <div class="moda-delivery">
       <br />
       <strong>DELIVERY MODA E ACESSÓRIOS</strong>
+
       <div class="div-input">
         <label for="acessoriosfemininos"> Acessorios Femininos</label>
         <input
@@ -270,6 +273,7 @@
         <input type="checkbox" name="modapraiadelivery" id="modapraia" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="pet-delivery">
       <br />
       <strong>DELIVERY PETS E AGRO</strong>
@@ -312,6 +316,7 @@
       </div>
     </div>
 
+    <div class="hr"></div>
     <div class="saude-beleza-delivery">
       <br />
       <strong>SAÚDE E BELEZA</strong>
@@ -361,6 +366,7 @@
         <input type="checkbox" name="terapiasdelivery" id="terapias" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="servicos">
       <br />
       <strong>SERVIÇOS GERAIS</strong>
@@ -430,6 +436,7 @@
         <input type="checkbox" name="vidraceiros" id="vidraceiros" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="turismo">
       <br />
       <strong>TURISMO</strong>
@@ -463,6 +470,7 @@
         <input type="checkbox" name="passeios" id="passeios" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="nautica">
       <br />
       <strong>NÁUTICA</strong>
@@ -496,6 +504,7 @@
         <input type="checkbox" name="passeiosoneutica" id="passeiosoneutica" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="religiao">
       <br />
       <strong>RELIGIÃO</strong>
@@ -525,6 +534,7 @@
         <input type="checkbox" name="outos" id="outos" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="educação">
       <br />
       <strong>EDUCAÇÃO</strong>
@@ -550,6 +560,7 @@
         <input type="checkbox" name="faculdades" id="faculdades" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="moda-acessorios">
       <br />
       <strong>MODA E ACESSORIOS</strong>
@@ -619,6 +630,7 @@
         <input type="checkbox" name="modapraia" id="modapraia" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="imoveis">
       <br />
       <strong>IMOVEIS</strong>
@@ -636,6 +648,7 @@
         />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="casa-moveis-decoracao">
       <br />
       <strong>CASA, MOVEIS E DECORAÇÃO</strong>
@@ -713,6 +726,7 @@
         />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="hotelaria">
       <br />
       <strong>HOTELARIA</strong>
@@ -759,6 +773,7 @@
         />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="eletronicos-informatica">
       <br />
       <strong>ELETRONICOS E INFORMÁTICA</strong>
@@ -791,7 +806,6 @@
           id="droneseacessorios"
         />
       </div>
-      
       <div class="div-input">
         <label for="eletronicos"> Eletrônicos</label>
         <input type="checkbox" name="eletronicos" id="eletronicos" />
@@ -821,6 +835,7 @@
         <input type="checkbox" name="projetoresetelas" id="projetoresetelas" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="profissioinais-liberais">
       <br />
       <strong>PROFISSIONAIS LIBERAIS</strong>
@@ -922,6 +937,7 @@
         <input type="checkbox" name="tradutores" id="tradutores" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="construcao-civil">
       <br />
       <strong>CONTRUÇÃO CIVIL</strong>
@@ -955,6 +971,7 @@
         <input type="checkbox" name="engenhariacivil" id="engenhariacivil" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="utilidade-publica">
       <br />
       <strong>UTLIDADE PUBLICA</strong>
@@ -988,6 +1005,7 @@
         <input type="checkbox" name="ongsutilidadepublica" id="ongs" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="alimentos-bebidas">
       <br />
       <strong>ALIMENTOS E BEBIDAS</strong>
@@ -1053,6 +1071,7 @@
         <input type="checkbox" name="sorveteseacai" id="sorveteseacai" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="arte-papelaria-armarinho">
       <br />
       <strong>ARTE, PAPELARIA E ARMARINHO</strong>
@@ -1090,6 +1109,7 @@
         <input type="checkbox" name="presentes" id="presentes" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="beleza-cuidado">
       <br />
       <strong>BELEZA E CUIDADO PESSOAL</strong>
@@ -1141,6 +1161,7 @@
         <input type="checkbox" name="perfumaria" id="perfumaria" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="saude">
       <br />
       <strong>SAÚDE</strong>
@@ -1186,6 +1207,7 @@
         />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="veiculos">
       <br />
       <strong>VEÍCULOS</strong>
@@ -1271,6 +1293,7 @@
         <input type="checkbox" name="taxidogveiculos" id="taxidog" />
       </div>
     </div>
+    <div class="hr"></div>
     <div class="pet-agro">
       <br />
       <strong>PET AGRO</strong>
